# firewheel

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  COPYRIGHT.md  DISCLAIMER.md  LICENSE  NOTICE  README.rst  SECURITY.md  install.sh  provision_env.sh  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/prepare-discovery/: action.yml
.github/actions/prepare-firewheel/: action.yml
.github/actions/prepare-minimega/: action.yml
.github/actions/prepare-tox/: action.yml
.github/workflows/: docker.yml  documentation.yml  linting.yml  pr-title-checker.yaml  pr-title-checker.yml  python-publish.yml  release-drafter.yml  testing.yml  update-changelog.yaml  update-changelog.yml  update-major-version.yml
.gitlab/ci/: setup.yml
docker/: README.md  firewheel.dockerfile  firewheel_no_perms.dockerfile  start-minimega.sh
docker/fsroot/: start-minimega.sh
docker/fsroot/etc/default/: minimega
docker/fsroot/root/: .tmux.conf
docs/source/: cheat_sheet.rst  concepts.rst  conf.py  emulytics.rst  glossary.rst  index.rst  quickstart.rst  spelling_names.txt  spelling_wordlist.txt  vmr_explorer.rst
docs/source/_static/: proto_doc.html  vmr_exp.html  vmr_exp_script.js  vmr_exp_styles.css
docs/source/cli/: cli_design.rst  commands.rst  helper_docs.rst  index.rst  usage.rst
docs/source/code/: cli.rst  control.rst  lib.rst
docs/source/developer/: cli_extension.rst  git-lfs.rst  index.rst  license.md
docs/source/developer/code/: config.rst  control.rst  index.rst  vm_resource_manager.rst
docs/source/experiment/: experiment.rst
docs/source/install/: configuration.rst  index.rst  install.rst  prereqs.rst
docs/source/install/prereqs/: dependencies.rst  git.rst  minimega.rst  pip-dependencies.rst  ssh_keys.rst  sudo.rst
docs/source/local_inventories/: clustershell_objects.inv  netaddr_objects.inv  python3_objects.inv  rich_objects.inv
docs/source/model_component/: mc_install.rst  model_component.rst
docs/source/repository/: repository.rst
docs/source/system/: Firewheel 2.0 Software Architecture.pptx  architecture.rst  diagrams.rst  index.rst  infrastructure.rst  objectives.rst  security.rst
docs/source/system/model_component/: dependencies.rst  fw2_model_components_repo.vsdx  index.rst  mc_examples.rst  mc_install.rst  model_component.rst  repository.rst
docs/source/system/vm_resource_manager/: index.rst  qga.rst  qga_patch.rst  vm_resource_handler.rst  vmr_in_experiment.rst  vmr_schedule.rst
docs/source/tutorials/: acme.rst  bios.rst  image.rst  index.rst  install_file.rst  offline_resources.rst  router_tree.rst  router_tree_diag.py  save_load.rst  simple_server.rst  tap.rst  vm_builder.rst
docs/source/tutorials/acme/: acme_complexity.rst  acme_diag.py  acme_manifest.rst  acme_topology.rst  acme_vm_configuration.rst  running_acme_topology.rst
docs/source/tutorials/image/: building_from_iso.rst  creating_model_component.rst  optimizing_image_size.rst  troubleshooting_images.rst
docs/source/tutorials/offline/: centos_offline.inc  ubuntu_offline.inc
docs/source/tutorials/simple_server/: adding_topological_complexity.rst  manual_interaction.rst  simple_server_diag.py  simple_server_manifest.rst  simple_server_topology.rst  testing_connectivity.rst  using_elk.rst  vm_configuration.rst  vmr_debugging.rst
docs/source/tutorials/simple_server/notebooks/: simple_server_jupyter.ipynb
docs/source/vm_resource_manager/: 0001-Allow-exceed-processes-to-ret-data-on-every-status.patch  index.rst  qga.rst  vm_resource_handler.rst  vmr_in_experiment.rst  vmr_schedule.rst
src/firewheel/: __init__.py
src/firewheel/cli/: configure_firewheel.py  executable_section.py  firewheel_cli.py  helper.py  helper_group.py  host_accessor.py  init_firewheel.py  section.py  ssh_manager.py  utils.py
src/firewheel/cli/completion/: __init__.py  actions.py  completion-template.sh  get_available_cli_commands.py  get_model_component_names.py  get_total_model_components_size.py  prepare_completion_script.py
src/firewheel/cli/executors/: abstract_executor.py  helpers.py  local_python.py  python.py  shell.py
src/firewheel/cli/helpers/: experiment  load  save  scp  ssh  start  status  time
src/firewheel/cli/helpers/example_helpers/: pytest  test
src/firewheel/cli/helpers/mc/: dep_graph  generate  list
src/firewheel/cli/helpers/mm/: mesh  (+5 more)
src/firewheel/config/: __init__.py  _config.py  config-template.yaml
src/firewheel/control/: dependency_graph.py  experiment_graph.py  image_store.py  model_component.py  model_component_dependency_graph.py  model_component_exceptions.py  model_component_install.py  model_component_iterator.py  model_component_manager.py  model_component_path_iterator.py  repository_db.py
src/firewheel/control/ansible_playbooks/: git.yml  main.yml  s3.yml  url.yml
src/firewheel/control/utils/: new_model_component.py  paths.py  vm_builder.py
src/firewheel/lib/: experiment_utils.py  log.py  utilities.py
src/firewheel/lib/discovery/: api.py
src/firewheel/lib/grpc/: firewheel_grpc.proto  firewheel_grpc_client.py  firewheel_grpc_pb2.py  firewheel_grpc_pb2.pyi  firewheel_grpc_pb2_grpc.py  firewheel_grpc_resources.py  firewheel_grpc_server.py
src/firewheel/lib/minimega/: api.py  file_store.py
src/firewheel/tests/: conftest.py
src/firewheel/tests/functional/: check_times_testcase.py  common.py  minimal_testcase.py  network_testcase.py  qos_testcase.py  reboot_testcase.py  router_tree_testcase.py  run_functional_tests.py  verifier.py  vm_resource_testcase.py  windows_router_tree_testcase.py  windows_vm_resource_testcase.py
src/firewheel/tests/unit/: conftest.py  test_utils.py
src/firewheel/vm_resource_manager/: abstract_driver.py  api.py  experiment_start.py  schedule_db.py  schedule_entry.py  schedule_event.py  schedule_updater.py  utils.py  vm_mapping.py  vm_resource_handler.py  vm_resource_store.py
src/firewheel/vm_resource_manager/drivers/: qemu_guest_agent_driver.py
(+102 files in other folders)
